--- a/index.html
+++ b/index.html
@@ -3,58 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website Builder</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Kumi Landing Page</title>
+  <link rel="stylesheet" href="styles/landing_styles.css">
 </head>
 <body>
+  <!-- Navbar -->
   <header>
-    <div class="container">
-      <nav>
-        <div class="logo">
-          <img src="logo.png" alt="Logo">
-        </div>
-        <ul>
-          <li><a href="#" class="btn btn-login">Login</a></li>
-          <li><a href="#" class="btn btn-register">Register</a></li>
-        </ul>
-      </nav>
-      <div class="hero">
-        <h1>The website builder you're looking for</h1>
-        <p>Simple is a modern website builder powered by AI that changes how companies create user interfaces together.</p>
-        <div class="cta-buttons">
-          <a href="#" class="btn btn-primary">Start Free Trial</a>
-          <a href="#" class="btn btn-secondary">Learn More</a>
-        </div>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="imgs/KUMI_logo.svg" alt="Kumi Logo">
       </div>
-    </div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#team">Meet the Team</a></li>
+        <li><a href="#waitlist">Join the Waitlist</a></li>
+      </ul>
+      <div class="auth-buttons">
+        <a href="#" class="btn btn-login">Login</a>
+        <a href="#" class="btn btn-register">Register</a>
+      </div>
+    </nav>
   </header>
 
-  <section class="features">
-    <div class="container">
-      <h2>Simple helps your teams work more efficiently together</h2>
-      <div class="feature-icons">
-        <img src="icon1.png" alt="Feature Icon 1">
-        <img src="icon2.png" alt="Feature Icon 2">
-        <img src="icon3.png" alt="Feature Icon 3">
-        <img src="icon4.png" alt="Feature Icon 4">
+  <!-- Home Section -->
+  <section id="home" class="section">
+    <div class="fullscreen-container">
+        <video autoplay muted loop class="fullscreen-video">
+            <source src="vid/KUMI_home.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>Kumi is a platform designed to foster learning, creativity, and collaboration through engaging activities and interactions.</p>
+  </section>
+
+  <!-- Meet the Team Section -->
+  <section id="team" class="section">
+    <h2>Meet the Team</h2>
+    <div class="team-cards">
+      <div class="card">
+        <h3>Team Member 1</h3>
+        <p>Lead Developer</p>
+      </div>
+      <div class="card">
+        <h3>Team Member 2</h3>
+        <p>Product Manager</p>
+      </div>
+      <div class="card">
+        <h3>Team Member 3</h3>
+        <p>Designer</p>
+      </div>
+      <div class="card">
+        <h3>Team Member 4</h3>
+        <p>Lead Designer</p>
       </div>
     </div>
   </section>
 
-  <section class="analytics">
-    <div class="container">
-      <div class="analytics-content">
-        <h2>Analytics, Metadata, SEO & Performance</h2>
-        <div class="globe"></div>
-      </div>
-    </div>
+  <!-- Join the Waitlist Section -->
+  <section id="waitlist" class="section">
+    <h2>Join the Waitlist</h2>
+    <a href="#" class="btn btn-primary">Join Now</a>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <div class="container">
-      <p>&copy; 2024 Cruip.com - All rights reserved.</p>
-      <a href="#" class="btn btn-primary">Start Free Trial</a>
-    </div>
+    <p>&copy; 2024 Kumi - All rights reserved.</p>
   </footer>
 </body>
 </html>
