--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
     <h2>Meet the Team</h2>
     <div class="team-cards">
       <div class="card">
-        <h3>Team Member 1</h3>
-        <p>Lead Developer</p>
+        <img class = teamimgs src = "imgs/nana.jpeg"> 
+        <h3>Nana K. Amoako</h3>
+        <p>Front End Developer</p>
       </div>
       <div class="card">
-        <h3>Team Member 2</h3>
+        <img class = teamimgs src = "imgs/lady.jpeg"> 
+        <h3>Lady-M. Hagan</h3>
         <p>Product Manager</p>
       </div>
       <div class="card">
-        <h3>Team Member 3</h3>
-        <p>Designer</p>
+        <img class = teamimgs src = "imgs/caleb.jpeg"> 
+        <h3>Caleb O. Arthur</h3>
+        <p>Backend Developer</p>
       </div>
       <div class="card">
-        <h3>Team Member 4</h3>
-        <p>Lead Designer</p>
+        <img class = teamimgs src = "imgs/frances.jpeg"> 
+        <h3>Frances S. Fiahagbe</h3>
+        <p>Backend Developer</p>
       </div>
     </div>
   </section>
