--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
     <h2>Meet the Team</h2>
     <div class="team-cards">
       <div class="card">
-        <img class = teamimgs src = "imgs/nana.jpeg"> 
-        <h3>Nana K. Amoako</h3>
+        <img src = "imgs/nana.jpeg"> 
+        <h3>Nana Kwaku Amoako</h3>
         <p>Front End Developer</p>
       </div>
       <div class="card">
-        <img class = teamimgs src = "imgs/lady.jpeg"> 
+        <img src = "imgs/lady.jpeg"> 
         <h3>Lady-M. Hagan</h3>
         <p>Product Manager</p>
       </div>
       <div class="card">
-        <img class = teamimgs src = "imgs/caleb.jpeg"> 
+        <img src = "imgs/caleb.jpeg"> 
         <h3>Caleb O. Arthur</h3>
         <p>Backend Developer</p>
       </div>
       <div class="card">
-        <img class = teamimgs src = "imgs/frances.jpeg"> 
+        <img src = "imgs/frances.jpeg"> 
         <h3>Frances S. Fiahagbe</h3>
         <p>Backend Developer</p>
       </div>
