--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- Join the Waitlist Section -->
   <section id="waitlist" class="section">
     <h2>Join the Waitlist</h2>
-    <a href="#" class="btn btn-primary">Join Now</a>
+    <a href="waitlist.html" class="btn btn-primary">Join Now</a>
   </section>
 
   <!-- Footer -->
