Register page complete!

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li><a href="#waitlist">Join the Waitlist</a></li>
       </ul>
       <div class="auth-buttons">
-        <a href="#" class="btn btn-login">Login</a>
-        <a href="#" class="btn btn-register">Register</a>
+        <a href="login.html" class="btn btn-login">Login</a>
+        <a href="register.html" class="btn btn-register">Register</a>
       </div>
     </nav>
   </header>
@@ -62,7 +62,7 @@
         <p>Backend Developer</p>
       </div>
       <div class="card">
-        <img src = "imgs/frances.jpeg"> 
+        <img src = "imgs/frances.jpg"> 
         <h3>Frances S. Fiahagbe</h3>
         <p>Backend Developer</p>
       </div>
