--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
 
 	<div class="signup-container">
 	
-
+        <h2>Register</h2>
 		<form id="signupForm">
 			<input type="text" id="firstName" name="firstName" required placeholder="First Name">
 			<span class="error" id="firstNameError"></span>
