--- a/Student_Profile_Page.html
+++ b/Student_Profile_Page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Profile Page</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/Profile_Page.css">
 </head>
 <body>
