--- a/register.html
+++ b/register.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel = "icon" type = "image/x-icon" href = "mainLogo.jpg">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/register.css">
 	<Title> Kumi-Register</Title>
 </head>
