--- a/teacher_dashboard.html
+++ b/teacher_dashboard.html
@@ -25,7 +25,7 @@
 
     <main class="dashboard">
         <section class="welcome-section">
-            <h1>Welcome Back</h1>
+            <h1>Welcome Back, 'Teacher Amps'</h1>
             <p class="welcome-message">Welcome back to your dashboard</p>
             <div class="welcome-content">
                 <div class="create-quiz-button">
@@ -40,6 +40,7 @@
         <section class="published-quizzes">
             <h2>Published Quizzes</h2>
             <div class="quiz-list">
+                <a href="all_results_view.html" class="quiz-item-link">
                 <div class="quiz-item">
                     <span class="quiz-title">Algorithms Quiz 1</span>
                     <div class="quiz-actions">
@@ -51,18 +52,22 @@
                         </button>
                     </div>
                 </div>
+                </a>
 
-                <div class="quiz-item">
-                    <span class="quiz-title">Web Tech Quiz 3</span>
-                    <div class="quiz-actions">
+                <a href="all_results_view.html" class="quiz-item-link">
+                    <div class="quiz-item">
+                      <span class="quiz-title">Web Tech Quiz 3</span>
+                      <div class="quiz-actions">
                         <button class="edit" title="Edit">
-                            <i class='bx bxs-edit'></i>
+                          <i class='bx bxs-edit'></i>
                         </button>
                         <button class="delete" title="Delete">
-                            <i class='bx bx-trash'></i>
+                          <i class='bx bx-trash'></i>
                         </button>
+                      </div>
                     </div>
-                </div>
+                  </a>
+
             </div>
         </section>
     </main>
